Fails to build with GCC 8.1.1
Current vte Git master and the 0.53.0 tarball fails to build with GCC 8.1.1:
vteseq.cc:47:1: error: declaration of 'void vte::parser::Sequence::print() const' has a different exception specifier
vte::parser::Sequence::print() const
^~~
In file included from vteinternal.hh:30,
from vteseq.cc:34:
parser-glue.hh:83:14: note: from previous declaration 'void vte::parser::Sequence::print() const noexcept'
void print() const noexcept;
^~~~~
vteseq.cc:147:1: error: declaration of 'char* vte::parser::Sequence::ucs4_to_utf8(const gunichar*, ssize_t) const' has a different exception specifier
vte::parser::Sequence::ucs4_to_utf8(gunichar const* str,
^~~
In file included from vteinternal.hh:30,
from vteseq.cc:34:
parser-glue.hh:80:15: note: from previous declaration 'char* vte::parser::Sequence::ucs4_to_utf8(const gunichar*, ssize_t) const noexcept'
char* ucs4_to_utf8(gunichar const* str,
^~~~~~~~~~~~
vteseq.cc:1431:1: error: declaration of 'void VteTerminalPrivate::set_color_index(const vte::parser::Sequence&, vte::parser::StringTokeniser::const_iterator&, const vte::parser::StringTokeniser::const_iterator&, int, int, int, int)' has a different exception specifier
VteTerminalPrivate::set_color_index(vte::parser::Sequence const& seq,
^~~~~~~~~~~~~~~~~~
In file included from vteseq.cc:34:
vteinternal.hh:1316:14: note: from previous declaration 'void VteTerminalPrivate::set_color_index(const vte::parser::Sequence&, vte::parser::StringTokeniser::const_iterator&, const vte::parser::StringTokeniser::const_iterator&, int, int, int, int) noexcept'
void set_color_index(vte::parser::Sequence const& seq,
^~~~~~~~~~~~~~~
Builds with older GCC (eg., 7.3.1) are unaffected.