parser: Fix the build with GCC 8.1.1

Otherwise it fails with:

vteseq.cc:47:1: error: declaration of
      'void vte::parser::Sequence::print() const' has a different
      exception specifier
    vte::parser::Sequence::print() const
    ^~~
  In file included from vteinternal.hh:30,
                   from vteseq.cc:34:
  parser-glue.hh:83:14: note: from previous declaration
      'void vte::parser::Sequence::print() const noexcept'
           void print() const noexcept;
                ^~~~~

... and so on.

Fixes GNOME/vte#5:
https://gitlab.gnome.org/GNOME/vte/issues/5